// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersComponent should render 1`] = `
<div>
  <Dropdown
    filter={true}
    onChange={[MockFunction]}
    optionLabel="name"
    options={
      Array [
        Object {
          "cvId": "idCv",
          "name": "CV",
          "userId": "partnerCv",
        },
        Object {
          "cvId": "cvId",
          "name": "Partner",
          "userId": "cvPartner",
        },
      ]
    }
    style={
      Object {
        "width": "100%",
      }
    }
    value={Object {}}
  />
</div>
`;

exports[`UsersComponent should render empty 1`] = `
<div>
  <h2>
    No users found.
  </h2>
</div>
`;

exports[`UsersComponent should render loading 1`] = `
<div>
  <h2>
    Loading...
  </h2>
</div>
`;
